--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     hooks:
       - id: cargo-format
         name: cargo format
-        entry: cargo fmt
+        entry: cargo fmt -- --check
         language: system
         types: [text]
         files: "\\.(rs)$"
