--- a/crates/resolver/Cargo.toml
+++ b/crates/resolver/Cargo.toml
@@ -11,6 +11,7 @@ readme.workspace = true
 authors.workspace = true
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"], optional = true }
 git2 = { version = "0.20.2", features = ["vendored-openssl"] }
 glob = "0.3.3"
 log = "0.4.27"
