--- a/crates/semifold/Cargo.toml
+++ b/crates/semifold/Cargo.toml
@@ -29,7 +29,9 @@ log = "0.4.27"
 octocrab = "0.47.0"
 rust-i18n = "3.1.5"
 saphyr = "0.0.6"
-semifold-resolver = { version = "0.2.2", path = "../resolver" }
+semifold-resolver = { version = "0.2.2", path = "../resolver", features = [
+    "clap",
+] }
 semifold-changelog = { version = "0.2.0", path = "../changelog" }
 sys-locale = "0.3.2"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
